--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,10 @@
 			<artifactId>junit-vintage-engine</artifactId>
 			<version>${junit.version}</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.apache.maven.doxia</groupId>
+            <artifactId>doxia-decoration-model</artifactId>
+            <version>1.4</version>
+        </dependency>
+    </dependencies>
 </project>
